# upside-my-app-01

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
tests/: test_main.py
