[project]
name = "devops-demo-api"
version = "0.1.0"
description = "FastAPI-based DevOps demo API"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.115.12",
    "pydantic==2.4.0",
    "uvicorn[standard]==0.34.0",
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
]

[tool.uv]
exclude-newer = "7 days"
package = false
required-version = "==0.10.9"
